[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Visual/textImages/Granada.png" type="Texture" id=1]
[ext_resource path="res://Resources/Logic/Codes/Player/Weapons/GrenadeWeapon.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
rough = true
bounce = 0.5

[sub_resource type="CircleShape2D" id=2]

[node name="GrenadeWeapon" type="RigidBody2D"]
self_modulate = Color( 0.419608, 0.541176, 0.113725, 1 )
collision_layer = 0
collision_mask = 2
mass = 0.1
physics_material_override = SubResource( 1 )
gravity_scale = 2.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.5
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.270588, 0.34902, 0.0745098, 1 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="tmr_Explode" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_GrenadeWeapon_body_entered"]
[connection signal="timeout" from="tmr_Explode" to="." method="_on_tmr_Explode_timeout"]
